added scripted tests